--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Visualisierungen von Kebabläden-Daten in deutschen Städten mit React, D3.js, Tailwind CSS und Vite." />
+    <meta name="description" content="Modern data visualization dashboard built with React, D3.js, Tailwind CSS, TypeScript, and Vite." />
     <meta name="theme-color" content="#2980b9" />
-    <meta name="author" content="Kebabläden Visualisierungen" />
+    <meta name="author" content="Amanullah Manssur" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
-    <title>Kebabläden Visualisierungen Dashboard 🍢</title>
+    <link rel="icon" type="image/svg+xml" href="/public/favicons/AM-Logo-D3.svg" />
+    <title>D3 Visualizations Dashboard | Amanullah Manssur</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
