--- a/index.html
+++ b/index.html
@@ -3,13 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Modern data visualization dashboard built with React, D3.js, Tailwind CSS, TypeScript, and Vite." />
+    <meta
+      name="description"
+      content="Modern data visualization dashboard built with React, D3.js, Tailwind CSS, TypeScript, and Vite."
+    />
     <meta name="theme-color" content="#2980b9" />
     <meta name="author" content="Amanullah Manssur" />
+
+    <!-- SEO -->
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://viz.amanssur.com/" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+
+    <!-- Icons -->
+    <link rel="icon" type="image/svg+xml" href="/favicons/AM-Logo-D3.svg" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicons/AM-Logo-D3-512.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicons/AM-Logo-D3-192.png" />
+    <link rel="icon" type="image/png" sizes="180x180" href="/favicons/AM-Logo-D3-180.png" />
+    <link rel="apple-touch-icon" href="/favicons/AM-Logo-D3-180.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
-    <link rel="icon" type="image/svg+xml" href="/public/favicons/AM-Logo-D3.svg" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
     <title>D3 Visualizations Dashboard | Amanullah Manssur</title>
   </head>
   <body>
