--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/favicons/AM-Logo-D3-512.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/favicons/AM-Logo-D3-192.png" />
     <link rel="icon" type="image/png" sizes="180x180" href="/favicons/AM-Logo-D3-180.png" />
+    <link rel="icon" type="image/x-icon" href="/favicons/AM-Logo-D3.ico" />
     <link rel="apple-touch-icon" href="/favicons/AM-Logo-D3-180.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
 
