chore(index): confirm and retain robots meta tag for proper SEO indexing

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     />
     <meta name="theme-color" content="#2980b9" />
     <meta name="author" content="Amanullah Manssur" />
+    <meta name="application-name" content="D3 Visualizations Dashboard" />
 
     <!-- SEO -->
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://viz.amanssur.com/" />
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/meta/sitemap.xml" />
 
     <!-- Icons -->
     <link rel="icon" type="image/svg+xml" href="/favicons/AM-Logo-D3.svg" />
@@ -22,7 +23,7 @@
     <link rel="icon" type="image/png" sizes="180x180" href="/favicons/AM-Logo-D3-180.png" />
     <link rel="icon" type="image/x-icon" href="/favicons/AM-Logo-D3.ico" />
     <link rel="apple-touch-icon" href="/favicons/AM-Logo-D3-180.png" />
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="manifest" href="/meta/manifest.webmanifest" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
