feat: full platform refactor: case studies, new design system, navbar redesign, UI cleanup

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/meta/sitemap.xml" />
 
     <!-- Icons -->
-    <link rel="icon" type="image/svg+xml" href="/favicons/AM-Logo-D3.svg" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/favicons/AM-Logo-D3-512.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/favicons/AM-Logo-D3-192.png" />
-    <link rel="icon" type="image/png" sizes="180x180" href="/favicons/AM-Logo-D3-180.png" />
-    <link rel="icon" type="image/x-icon" href="/favicons/AM-Logo-D3.ico" />
-    <link rel="apple-touch-icon" href="/favicons/AM-Logo-D3-180.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicons/AM-Logo.svg" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicons/AM-Logo-512.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicons/AM-Logo-192.png" />
+    <link rel="icon" type="image/png" sizes="180x180" href="/favicons/AM-Logo-180.png" />
+    <link rel="icon" type="image/x-icon" href="/favicons/AM-Logo.ico" />
+    <link rel="apple-touch-icon" href="/favicons/AM-Logo-180.png" />
     <link rel="manifest" href="/meta/manifest.webmanifest" />
 
     <!-- Fonts -->
