chore: sync viz SEO meta, manifest, sitemap and robots

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
       name="description"
       content="Modern data visualization dashboard built with React, D3.js, Tailwind CSS, TypeScript, and Vite."
     />
-    <meta name="theme-color" content="#2980b9" />
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="color-scheme" content="light dark" />
     <meta name="author" content="Amanullah Manssur" />
     <meta name="application-name" content="D3 Visualizations Dashboard" />
 
     <!-- SEO -->
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://viz.amanssur.com/" />
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/meta/sitemap.xml" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
     <!-- Icons -->
     <link rel="icon" type="image/svg+xml" href="/favicons/AM-Logo.svg" />
@@ -23,7 +24,7 @@
     <link rel="icon" type="image/png" sizes="180x180" href="/favicons/AM-Logo-180.png" />
     <link rel="icon" type="image/x-icon" href="/favicons/AM-Logo.ico" />
     <link rel="apple-touch-icon" href="/favicons/AM-Logo-180.png" />
-    <link rel="manifest" href="/meta/manifest.webmanifest" />
+    <link rel="manifest" href="/manifest.webmanifest" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
