Update meta tags and schema

--- a/index.html
+++ b/index.html
@@ -12,6 +12,108 @@
     <meta name="author" content="Amanullah Manssur" />
     <meta name="application-name" content="D3 Visualizations Dashboard" />
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="Amanullah – Data Visualization Suite" />
+    <meta property="og:description" content="Interactive D3 visualizations, dashboards, and data stories built by Amanullah Manssur." />
+    <meta property="og:image" content="/og-banner.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://viz.amanssur.com" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Amanullah – Data Visualization Suite" />
+    <meta name="twitter:description" content="Interactive D3 visualizations, dashboards, and data stories built by Amanullah Manssur." />
+    <meta name="twitter:image" content="/og-banner.jpg" />
+
+    <!-- Same-As / Identity Links -->
+    <link rel="me" href="https://viz.amanssur.com" />
+    <link rel="me" href="https://amanssur.com" />
+    <link rel="me" href="https://manssurmedia.com" />
+    <link rel="me" href="https://x.com/manssurmedia" />
+    <link rel="me" href="https://linkedin.com/in/amanssur" />
+    <link rel="me" href="https://github.com/amanssur-tech" />
+    <link rel="me" href="https://medium.com/@amanssur" />
+
+    <!-- JSON-LD Identity -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Amanullah Manssur",
+      "url": "https://viz.amanssur.com",
+      "sameAs": [
+        "https://viz.amanssur.com",
+        "https://amanssur.com",
+        "https://manssurmedia.com",
+        "https://x.com/manssurmedia",
+        "https://linkedin.com/in/amanssur",
+        "https://github.com/amanssur-tech",
+        "https://medium.com/@amanssur"
+      ]
+    }
+    </script>
+
+    <!-- JSON-LD Website -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Amanullah – Data Visualization Suite",
+      "url": "https://viz.amanssur.com",
+      "publisher": {
+        "@type": "Person",
+        "name": "Amanullah Manssur",
+        "url": "https://viz.amanssur.com"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://viz.amanssur.com/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
+    <!-- JSON-LD Breadcrumbs -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://viz.amanssur.com"
+        }
+      ]
+    }
+    </script>
+
+    <!-- JSON-LD GitHub Profile -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfilePage",
+      "name": "Amanullah Manssur GitHub",
+      "url": "https://github.com/amanssur-tech",
+      "mainEntity": {
+        "@type": "Person",
+        "name": "Amanullah Manssur",
+        "sameAs": [
+          "https://github.com/amanssur-tech",
+          "https://viz.amanssur.com",
+          "https://amanssur.com",
+          "https://manssurmedia.com",
+          "https://x.com/manssurmedia",
+          "https://linkedin.com/in/amanssur",
+          "https://medium.com/@amanssur"
+        ]
+      }
+    }
+    </script>
+
     <!-- SEO -->
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://viz.amanssur.com/" />
