--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <!-- Open Graph -->
     <meta property="og:title" content="Amanullah – Data Visualization Suite" />
-    <meta property="og:description" content="Interactive D3 visualizations, dashboards, and data stories built by Amanullah Manssur." />
+    <meta
+      property="og:description"
+      content="Interactive D3 visualizations, dashboards, and data stories built by Amanullah Manssur."
+    />
     <meta property="og:image" content="/og-banner.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -24,7 +27,10 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Amanullah – Data Visualization Suite" />
-    <meta name="twitter:description" content="Interactive D3 visualizations, dashboards, and data stories built by Amanullah Manssur." />
+    <meta
+      name="twitter:description"
+      content="Interactive D3 visualizations, dashboards, and data stories built by Amanullah Manssur."
+    />
     <meta name="twitter:image" content="/og-banner.jpg" />
 
     <!-- Same-As / Identity Links -->
@@ -38,80 +44,80 @@
 
     <!-- JSON-LD Identity -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Amanullah Manssur",
-      "url": "https://viz.amanssur.com",
-      "sameAs": [
-        "https://viz.amanssur.com",
-        "https://amanssur.com",
-        "https://manssurmedia.com",
-        "https://x.com/manssurmedia",
-        "https://linkedin.com/in/amanssur",
-        "https://github.com/amanssur-tech",
-        "https://medium.com/@amanssur"
-      ]
-    }
-    </script>
-
-    <!-- JSON-LD Website -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "Amanullah – Data Visualization Suite",
-      "url": "https://viz.amanssur.com",
-      "publisher": {
+      {
+        "@context": "https://schema.org",
         "@type": "Person",
         "name": "Amanullah Manssur",
-        "url": "https://viz.amanssur.com"
-      },
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": "https://viz.amanssur.com/?q={search_term_string}",
-        "query-input": "required name=search_term_string"
-      }
-    }
-    </script>
-
-    <!-- JSON-LD Breadcrumbs -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [
-        {
-          "@type": "ListItem",
-          "position": 1,
-          "name": "Home",
-          "item": "https://viz.amanssur.com"
-        }
-      ]
-    }
-    </script>
-
-    <!-- JSON-LD GitHub Profile -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "ProfilePage",
-      "name": "Amanullah Manssur GitHub",
-      "url": "https://github.com/amanssur-tech",
-      "mainEntity": {
-        "@type": "Person",
-        "name": "Amanullah Manssur",
+        "url": "https://viz.amanssur.com",
         "sameAs": [
-          "https://github.com/amanssur-tech",
           "https://viz.amanssur.com",
           "https://amanssur.com",
           "https://manssurmedia.com",
           "https://x.com/manssurmedia",
           "https://linkedin.com/in/amanssur",
+          "https://github.com/amanssur-tech",
           "https://medium.com/@amanssur"
         ]
       }
-    }
+    </script>
+
+    <!-- JSON-LD Website -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Amanullah – Data Visualization Suite",
+        "url": "https://viz.amanssur.com",
+        "publisher": {
+          "@type": "Person",
+          "name": "Amanullah Manssur",
+          "url": "https://viz.amanssur.com"
+        },
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://viz.amanssur.com/?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
+
+    <!-- JSON-LD Breadcrumbs -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://viz.amanssur.com"
+          }
+        ]
+      }
+    </script>
+
+    <!-- JSON-LD GitHub Profile -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfilePage",
+        "name": "Amanullah Manssur GitHub",
+        "url": "https://github.com/amanssur-tech",
+        "mainEntity": {
+          "@type": "Person",
+          "name": "Amanullah Manssur",
+          "sameAs": [
+            "https://github.com/amanssur-tech",
+            "https://viz.amanssur.com",
+            "https://amanssur.com",
+            "https://manssurmedia.com",
+            "https://x.com/manssurmedia",
+            "https://linkedin.com/in/amanssur",
+            "https://medium.com/@amanssur"
+          ]
+        }
+      }
     </script>
 
     <!-- SEO -->
